Fix service link overflow on small screen

--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -306,6 +306,7 @@
     display: -webkit-flex;
     display: flex;
     justify-content: center;
+    flex-wrap: wrap;
     margin: 0;
   }
 
